buildscript {
  dependencies {
    classpath "org.flywaydb:flyway-database-postgresql:13.3.0"
  }
}

plugins {
    id 'application'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
    id 'idea'
    id 'com.github.ben-manes.versions' version '0.61.0'
    id 'com.gorylenko.gradle-git-properties' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
    id 'org.flywaydb.flyway' version '13.3.0'
    id 'org.owasp.dependencycheck' version '13.0.0'
    id 'org.sonarqube' version '7.4.0.8496'
    id 'org.springframework.boot' version '4.1.1'
    id 'uk.gov.hmcts.java' version '0.12.70'
    id "info.solidsoft.pitest" version '1.19.0'
    id "org.springdoc.openapi-gradle-plugin" version "1.9.0"
    id 'au.com.dius.pact' version '4.7.5'
}

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

gitProperties {
    gitPropertiesResourceDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/reform/laubackend/idam/gitcommit")
    keys = ['git.commit.id', 'git.commit.time']
    dateFormat = "yyyy-MM-dd'T'HH:mmZ"
    dateFormatTimeZone = "GMT"
}

sourceSets {
    test {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/test/java')
        }
        resources.srcDir file('src/test/resources')
    }

    functionalTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/functionalTest/java')
        }
        resources.srcDir file('src/functionalTest/resources')
    }

    integrationTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }

    smokeTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/smokeTest/java')
        }
        resources.srcDir file('src/smokeTest/resources')
    }
    contractTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/contractTest/java')
        }
        resources.srcDir file('src/contractTest/resources')
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

idea {
  module {
    testSources.from(project.sourceSets.integrationTest.java.srcDirs)
    testSources.from(project.sourceSets.functionalTest.java.srcDirs)
    testSources.from(project.sourceSets.smokeTest.java.srcDirs)
    testResources.from(project.sourceSets.integrationTest.resources.srcDirs)
    testResources.from(project.sourceSets.functionalTest.resources.srcDirs)
    testResources.from(project.sourceSets.smokeTest.resources.srcDirs)
  }
}

test {
    useJUnitPlatform()
    failFast = true
}

configurations {
    cucumberRuntime {
        extendsFrom testImplementation
    }
    integrationTestCompile.extendsFrom testCompile
    integrationTestRuntime.extendsFrom testRuntime
    functionalTestCompile.extendsFrom testCompile
    functionalTestRuntime.extendsFrom testRuntime
    contractTestImplementation.extendsFrom(testImplementation)
    contractTestRuntimeOnly.extendsFrom(testRuntimeOnly)
}

tasks.register('unit', Test) {
  testClassesDirs = sourceSets.test.output.classesDirs
  classpath = sourceSets.test.runtimeClasspath
  useJUnitPlatform()
}

tasks.register('functional', Test) {
  systemProperty "scenario", System.getProperty('scenario')
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  useJUnitPlatform()
  finalizedBy aggregate
}

tasks.register('integration', Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  mustRunAfter test
  useJUnitPlatform()
}

check.dependsOn integration


tasks.register('smoke', Test) {
  description = "Runs Smoke Tests"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
  useJUnitPlatform()
}

tasks.register('fortifyScan', JavaExec) {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

tasks.register('contract', Test) {
  description = "Runs the consumer Pact tests"
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
}

project.ext.pacticipantVersion = getCheckedOutGitCommitHash()

static def getCheckedOutGitCommitHash() {
  'git rev-parse --verify --short HEAD'.execute().text.trim()
}

pact {
  broker {
    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
  }
  publish {
    pactDirectory = 'pacts'
    tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
    version = project.pacticipantVersion
  }
}

tasks.register('runAndPublishConsumerPactTests', Test) {
  dependsOn(contract)
  finalizedBy(pactPublish)
}

checkstyle {
    maxWarnings = 0
    toolVersion = '14.0.0'
    getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
    toolVersion = "7.26.0"
    sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
    reportsDir = file("$project.buildDir/reports/pmd")
    // https://github.com/pmd/pmd/issues/876
    ruleSets = []
    ruleSetFiles = files("config/pmd/ruleset.xml")
}

project.tasks['jacocoTestReport'].dependsOn test, integration

jacocoTestReport {
    executionData(test, integration)
    reports {
        xml.required = true
        csv.required = false
        xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
    }
}

pitest {
    junit5PluginVersion.set('1.2.1')
    targetClasses = ['uk.gov.hmcts.reform.laubackend.*']
    excludedClasses = [
            'uk.gov.hmcts.reform.laubackend.idam.madeup.*'
    ]
    threads = 10
    enableDefaultIncrementalAnalysis = true
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
    mutationThreshold = 50
    timeoutConstInMillis = 30000
    mutators.set([
            'CONDITIONALS_BOUNDARY',
            'INCREMENTS',
            'INVERT_NEGS',
            'MATH',
            'NEGATE_CONDITIONALS',
            'VOID_METHOD_CALLS',
            'EMPTY_RETURNS',
            'FALSE_RETURNS',
            'NULL_RETURNS',
            'PRIMITIVE_RETURNS',
            'TRUE_RETURNS',
            'REMOVE_CONDITIONALS'
    ])
}

project.tasks['pitest'].group = "Verification"

project.tasks['sonarqube'].dependsOn jacocoTestReport

sonarqube {
    properties {
        property "sonar.projectName", "Reform :: lau-idam-backend"
        property "sonar.projectKey", "uk.gov.hmcts.reform:lau-idam-backend"
        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
        property "sonar.sources", "src/main/java"
        property "sonar.tests", "src/test/java,src/smokeTest/java,src/functionalTest/java,src/integrationTest/java"
    }
}

// before committing a change, make sure task still works
dependencyUpdates {
    def isNonStable = { String version ->
        def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
        def regex = /^[0-9,.v-]+$/
        return !stableKeyword && !(version ==~ regex)
    }
    rejectVersionIf { selection -> // <---- notice how the closure argument is named
        return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
    }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
    // range of 0-10 fails the build, anything greater and it doesn't fail the build
    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
    suppressionFile = 'config/owasp/suppressions.xml'

    analyzers {
        // Disable scanning of .NET related binaries
        assemblyEnabled = false
    }
}

dependencyManagement {
  imports {
    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.1.3'
  }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
      url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

def versions = [
  appinsights       : '3.7.9',
  commonsIo         : '2.22.0',
  cucumber          : '7.34.7',
  flywaydb          : '13.3.0',
  gradlePitest      : '1.15.0',
  idamClient        : '4.0.0',
  junit             : '5.12.2',
  junitPlatform     : '1.12.2',
  log4j             : '2.26.1',
  lombok            : '1.18.46',
  pact              : '4.7.5',
  reformLogging     : '8.0.0',
  restAssured       : '6.0.1',
  serenity          : '5.3.11',
  serviceAuthVersion: '6.1.0',
  sonarPitest       : '0.5',
  springBoot        : springBoot.class.package.implementationVersion,
  testcontainers    : '2.0.5',
  wiremock          : '3.13.2',
]

configurations.all {
    resolutionStrategy {
        eachDependency { DependencyResolveDetails details ->
            if (details.requested.group in ['org.apache.logging.log4j']) {
                details.useVersion versions.log4j
            }
            if (details.requested.name == 'commons-lang3') {
            details.useVersion '3.18.0'
            }
        }
    }
}

ext['tomcat.version'] = '11.0.25'

dependencies {
    constraints {
        implementation "com.fasterxml.jackson.core:jackson-databind:2.22.1"
    }

    modules {
        module("com.google.collections:google-collections") {
            replacedBy("com.google.guava:guava", "google-collections is part of guava")
        }
    }

    implementation "commons-io:commons-io:${versions.commonsIo}"
    implementation "org.springframework.boot:spring-boot-starter-webmvc"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-jackson"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-flyway"
    implementation "org.springframework.boot:spring-boot-starter-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.0"
    implementation "com.microsoft.azure:applicationinsights-core:${versions.appinsights}"
    implementation "com.microsoft.azure:applicationinsights-web:${versions.appinsights}"
    implementation "org.flywaydb:flyway-core:${versions.flywaydb}"
    implementation "org.flywaydb:flyway-database-postgresql:${versions.flywaydb}"
    implementation "org.postgresql:postgresql:42.7.13"
    implementation "org.apache.logging.log4j:log4j-api:${versions.log4j}"
    implementation "org.apache.logging.log4j:log4j-to-slf4j:${versions.log4j}"
    implementation "org.projectlombok:lombok:${versions.lombok}"
    implementation "org.springframework.boot:spring-boot-starter-security-oauth2-resource-server"
    implementation "commons-fileupload:commons-fileupload:1.6.0"
    implementation "org.yaml:snakeyaml:2.6"
    implementation "commons-net:commons-net:3.13.0"
    implementation "com.github.hmcts:service-auth-provider-java-client:${versions.serviceAuthVersion}"
    implementation "com.github.hmcts:idam-java-client:${versions.idamClient}"
    implementation "com.github.hmcts.java-logging:logging:${versions.reformLogging}"
    implementation "jakarta.servlet:jakarta.servlet-api:6.1.0"
    implementation "org.apache.httpcomponents:fluent-hc:4.5.14"

    testImplementation "commons-beanutils:commons-beanutils:1.11.0"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.springframework.boot:spring-boot-starter-data-jpa-test"
    testImplementation "org.springframework.boot:spring-boot-starter-flyway-test"
    testImplementation "org.springframework.boot:spring-boot-starter-security-test"
    testImplementation "org.springframework.boot:spring-boot-starter-webmvc-test"
    testImplementation "net.serenity-bdd:serenity-core:${versions.serenity}"
    testImplementation "net.serenity-bdd:serenity-junit5:${versions.serenity}"
    testImplementation "net.serenity-bdd:serenity-rest-assured:${versions.serenity}"
    testImplementation "org.wiremock:wiremock-standalone:${versions.wiremock}"
    testImplementation "org.codehaus.sonar-plugins:sonar-pitest-plugin:${versions.sonarPitest}"
    testImplementation "org.testcontainers:testcontainers:${versions.testcontainers}"
    testImplementation "org.testcontainers:testcontainers-postgresql:${versions.testcontainers}"
    testImplementation "com.github.hmcts:fortify-client:1.4.10:all"
    testImplementation "jakarta.el:jakarta.el-api:6.0.1"

    annotationProcessor "org.projectlombok:lombok:${versions.lombok}"

    testCompile "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.gradlePitest}"
    testCompile "org.testcontainers:testcontainers:${versions.testcontainers}"
    testCompile "org.testcontainers:testcontainers-postgresql:${versions.testcontainers}"

    integrationTestCompile "org.testcontainers:testcontainers:${versions.testcontainers}"
    integrationTestCompile "org.testcontainers:testcontainers-postgresql:${versions.testcontainers}"

    integrationTestImplementation "org.testcontainers:testcontainers:${versions.testcontainers}"
    integrationTestImplementation "org.testcontainers:testcontainers-postgresql:${versions.testcontainers}"
    integrationTestImplementation "org.projectlombok:lombok:${versions.lombok}"
    integrationTestImplementation "io.cucumber:cucumber-java:${versions.cucumber}"
    integrationTestImplementation "io.cucumber:cucumber-spring:${versions.cucumber}"
    integrationTestImplementation "io.cucumber:cucumber-junit-platform-engine:${versions.cucumber}"
    integrationTestImplementation "org.junit.platform:junit-platform-suite"

    integrationTestAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

    integrationTestImplementation sourceSets.main.runtimeClasspath
    integrationTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation sourceSets.main.runtimeClasspath
    functionalTestImplementation sourceSets.test.runtimeClasspath

    smokeTestImplementation sourceSets.main.runtimeClasspath
    smokeTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation "org.projectlombok:lombok:${versions.lombok}"
    functionalTestAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

    smokeTestImplementation "io.rest-assured:rest-assured:${versions.restAssured}"
    smokeTestImplementation "io.rest-assured:rest-assured-common:${versions.restAssured}"
    smokeTestImplementation "io.rest-assured:json-path:${versions.restAssured}"
    smokeTestImplementation "io.rest-assured:xml-path:${versions.restAssured}"

    //Added for FN tests
    testImplementation "io.rest-assured:rest-assured:${versions.restAssured}"
    testImplementation "io.rest-assured:json-path:${versions.restAssured}"
    testImplementation "io.rest-assured:xml-path:${versions.restAssured}"
    testImplementation "com.google.code.gson:gson:2.14.0"

    testCompileOnly "org.projectlombok:lombok"
    testAnnotationProcessor "org.projectlombok:lombok"

    //pact contract testing
    contractTestImplementation "au.com.dius.pact:consumer:${versions.pact}"
    contractTestImplementation "au.com.dius.pact.consumer:junit5:${versions.pact}"

    contractTestImplementation sourceSets.main.runtimeClasspath
    contractTestImplementation sourceSets.test.runtimeClasspath
}

flyway {
    url = System.getenv('FLYWAY_URL')
    user = System.getenv('FLYWAY_USER')
    password = System.getenv('FLYWAY_PASSWORD')

    if (System.getenv("LAU_IDAM_DB_PASSWORD")) {
        placeholders = [
                'LAU_IDAM_DB_PASSWORD': System.getenv("LAU_IDAM_DB_PASSWORD")
        ]
    }

    baselineOnMigrate = true
    baselineVersion = '000'
}

import org.flywaydb.gradle.task.FlywayMigrateTask

tasks.register('migratePostgresDatabase', FlywayMigrateTask) {
  baselineOnMigrate = true
  if (project.hasProperty("dburl")) {
    url = "jdbc:postgresql://${dburl}"
  }
}

application {
  mainClass = 'uk.gov.hmcts.reform.laubackend.idam.Application'
}


bootJar {
    getArchiveFileName().set(provider {
        'lau-idam-backend.jar'
    })

    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processSmokeTestResources") {
    duplicatesStrategy = 'include'
}

rootProject.tasks.named("processIntegrationTestResources") {
    duplicatesStrategy = 'include'
}

rootProject.tasks.named("processFunctionalTestResources") {
    duplicatesStrategy = 'include'
}

rootProject.tasks.named("processContractTestResources") {
    duplicatesStrategy = 'include'
}

rootProject.tasks.named("processTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processResources") {
  dependsOn("generateGitProperties")
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
